tests/misc/tsystem_compileoption_err1.nim
discard """
  description: "Regression tests to see if invalid option fails correctly"
  errormsg: "Invalid compiler option - 'bob'"
"""

static:
  discard compileOption("bob")